rm code from dismissRelatedLookupPopup

--- a/src/ralph/admin/templates/admin/widgets/autocomplete.html
+++ b/src/ralph/admin/templates/admin/widgets/autocomplete.html
@@ -6,7 +6,7 @@
   {{multi}}
   query-ajax-url="{{ data_suggest_url }}"
   detailsurl="{{ data_details_url }}"
-> <!-- TODO:: `detailsurl` should work as search-url -->
+> <!-- TODO: `detailsurl` should work as search-url -->
   <a href="{{ related_url }}" class="related-lookup" id="lookup_id_{{ name }}">
     <i class="fa fa-search"></i>
   </a>
