cleaned widgets.py

--- a/src/ralph/admin/templates/admin/widgets/autocomplete.html
+++ b/src/ralph/admin/templates/admin/widgets/autocomplete.html
@@ -16,9 +16,7 @@
         <i class="fa fa-plus-circle"></i>
     </a>
   {% endif %}
-  {% if show_tooltip %}
-    <i data-tooltip class="has-tip fa fa-info-circle" title="{{ tooltip }}"></i>
-  {% endif %}
+  <tool-tip title='{{ searched_fields_info }}'> </tool-tip>
 
 </auto-complete>
 
